# chip-8

./: .gitignore  Cargo.toml  README.md  pinkan
src/: lib.rs  main.rs
